--- a/Content/css/hoitro-style.css
+++ b/Content/css/hoitro-style.css
@@ -1710,3 +1710,549 @@ ul.footer-menu-list li a:hover {
 .copyright ul.footer-company-info li p {
     padding: 0px;
 }
+
+/* chi tiết phòng */
+
+.the-post {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    border: 1px solid #dedede;
+    margin-bottom: 50px;
+}
+
+.the-post .section {
+    padding: 0;
+    border: 0;
+    border-radius: 0;
+}
+
+.post-images {
+    margin-top: -20px;
+    margin-left: -20px;
+    margin-right: -20px;
+    position: relative;
+}
+
+    .post-images .has-label {
+        height: 30px;
+        z-index: 2;
+    }
+
+        .post-images .has-label:after {
+            content: "";
+            position: absolute;
+            display: block;
+            top: 0;
+            right: -15px;
+            width: 0;
+            height: 0;
+            border-top: 15px solid transparent;
+            border-bottom: 15px solid transparent;
+            border-left: 15px solid #ff3d27;
+        }
+
+    .post-images .chothuenhanh-label {
+        width: 90px;
+        height: 90px;
+        pointer-events: none;
+        background: url(../images/chothuenhanh-label.png) center no-repeat;
+        background-size: contain;
+        position: absolute;
+        top: -7px;
+        left: -7px;
+        z-index: 2;
+    }
+
+    .post-images .images-swiper-container {
+        position: relative;
+        background: #16181f url(../images/default-image.svg) center no-repeat;
+        background-size: 100px 100px;
+        margin-bottom: 15px;
+        height: 317px;
+        overflow: hidden;
+    }
+
+    .post-images .swiper-slide {
+        height: 317px;
+        display: flex;
+        align-items: center;
+        background-color: #16181f;
+    }
+
+        .post-images .swiper-slide img {
+            max-height: 100%;
+            width: 100%;
+            display: block;
+            margin: 0 auto;
+            object-fit: contain;
+        }
+
+    .post-images .swiper-pagination {
+        background: transparent;
+        padding: 0px;
+        color: #fff;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: absolute;
+        width: 100%;
+    }
+
+        .post-images .swiper-pagination .swiper-pagination-bullet {
+            opacity: 1;
+            background: #ddd;
+            margin: 10px 3px 0;
+            width: 3px;
+            height: 3px;
+        }
+
+            .post-images
+            .swiper-pagination
+            .swiper-pagination-bullet.swiper-pagination-bullet-active {
+                width: 10px;
+                height: 10px;
+            }
+
+    .post-images .post-hot {
+        width: 40px;
+        height: 40px;
+        display: block;
+        background: url(../images/hot.svg) center no-repeat;
+        background-size: 100%;
+        pointer-events: none;
+        z-index: 1;
+        position: absolute;
+        top: 0;
+        left: 5px;
+    }
+
+    .post-images .post-save {
+        position: absolute;
+        top: 0px;
+        right: 0px;
+        width: 45px;
+        height: 45px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        z-index: 1;
+        cursor: pointer;
+    }
+
+        .post-images .post-save i {
+            width: 40px;
+            height: 40px;
+            background: url(../images/love.png) center no-repeat;
+            background-size: 30px;
+            display: inline-block;
+        }
+
+        .post-images .post-save.saved i {
+            background: url(../images/love-full-2.svg) center no-repeat;
+            background-size: 30px;
+        }
+
+.the-post .post-images .video-item {
+    width: 100%;
+    height: 100%;
+}
+
+.the-post .page-header {
+    padding: 5px 0 15px;
+}
+
+    .the-post .page-header.has-label-chothuenhanh {
+        padding-right: 110px;
+        position: relative;
+    }
+
+    .the-post .page-header .icon-label-chothuenhanh {
+        width: 60px;
+        height: 60px;
+        background: url(../images/chothuenhanh-label.png) center no-repeat;
+        background-size: contain;
+        display: block;
+        position: absolute;
+        top: 0;
+        right: 0;
+    }
+
+.the-post .star {
+    background-size: 20px 20px;
+    width: 20px;
+    height: 23px;
+}
+
+    .the-post .star.star-1 {
+        width: 20px;
+        height: 23px;
+    }
+
+    .the-post .star.star-2 {
+        width: 40px;
+        height: 23px;
+    }
+
+    .the-post .star.star-3 {
+        width: 60px;
+        height: 23px;
+    }
+
+    .the-post .star.star-4 {
+        width: 80px;
+        height: 23px;
+    }
+
+    .the-post .star.star-5 {
+        width: 100px;
+        height: 23px;
+    }
+
+.the-post .post-address {
+    margin: 0 0 10px;
+    display: flex;
+    align-items: center;
+}
+
+    .the-post .post-address:before {
+        display: inline-block;
+        width: 15px;
+        height: 15px;
+        content: "";
+        background: url(../images/address-icon.svg) center no-repeat;
+        background-size: contain;
+        margin-right: 5px;
+    }
+
+.the-post .page-h1 {
+    font-size: 1.7rem;
+}
+
+    .the-post .page-h1 a {
+        color: #333;
+    }
+
+.the-post.normal .page-h1 {
+    text-transform: initial;
+    color: #333 !important;
+}
+
+.the-post .post-attributes {
+    display: flex;
+}
+
+    .the-post .post-attributes .item {
+        flex-direction: row;
+        -webkit-box-align: center;
+        align-items: center;
+        display: flex;
+        margin-right: 35px;
+        text-align: center;
+    }
+
+        .the-post .post-attributes .item:last-of-type {
+            margin-right: 0;
+        }
+
+        .the-post .post-attributes .item > i {
+            width: 16px;
+            height: 16px;
+            margin-right: 8px;
+        }
+
+        .the-post .post-attributes .item.price > i {
+            background: url(../images/price-icon.svg) center no-repeat;
+            background-size: contain;
+        }
+
+        .the-post .post-attributes .item.acreage > i {
+            background: url(../images/acreage-icon.svg) center no-repeat;
+            background-size: contain;
+        }
+
+        .the-post .post-attributes .item.published > i {
+            background: url(../images/wall-clock-icon.svg) center no-repeat;
+            background-size: contain;
+            opacity: 0.3;
+        }
+
+        .the-post .post-attributes .item.hashtag > i {
+            background: url(../images/hashtag.svg) center no-repeat;
+            background-size: contain;
+            opacity: 0.3;
+        }
+
+.the-post .post-price {
+    font-size: 1.1rem;
+    margin: 12px 0 0;
+}
+
+    .the-post .post-price .price {
+        color: #16c784;
+        margin-right: 0;
+        font-weight: bold;
+        display: inline-flex;
+        align-items: center;
+    }
+
+    .the-post .post-price .post-price-item {
+        margin-left: 45px;
+        display: inline-block;
+        font-weight: bold;
+        font-size: 1.2rem;
+    }
+
+        .the-post .post-price .post-price-item:first-of-type {
+            margin-left: 0px;
+        }
+
+        .the-post .post-price .post-price-item > span {
+            display: block;
+            margin-bottom: 5px;
+            font-weight: normal;
+            font-size: 1rem;
+            color: #777;
+        }
+
+.the-post .post-main-content .section-content {
+    font-size: 1.1rem;
+}
+
+.the-post table {
+    width: 100%;
+    border-spacing: 0;
+}
+
+    .the-post table tr:nth-of-type(even) {
+        background-color: #f5f5f5;
+    }
+
+    .the-post table td {
+        padding: 10px;
+        /* border: 1px solid #eee; */
+    }
+
+        .the-post table td.name {
+            white-space: nowrap;
+            width: 25%;
+        }
+
+.the-post .post-map iframe {
+    width: 100%;
+    height: 300px;
+}
+
+.the-post .post-report p {
+    color: #777;
+}
+
+.the-post .post-fix-bar {
+    display: none;
+}
+
+body.fix-body .the-post .post-fix-bar {
+    position: fixed;
+    display: block;
+    top: 40px;
+    left: 0;
+    z-index: 9999;
+    width: 100%;
+    background-color: #fff;
+    box-shadow: 0 2px 8px rgb(3 44 71 / 12%);
+}
+
+.the-post .post-fix-bar .inner {
+    width: 1100px;
+    margin: 0 auto;
+    padding: 7px 0px;
+}
+
+.the-post .post-fix-bar .left-bar {
+    float: left;
+}
+
+.the-post .post-fix-bar .right-bar {
+    float: right;
+    display: flex;
+}
+
+.the-post .post-fix-bar .post-fix-bar-price {
+    display: block;
+    font-size: 1.4rem;
+    font-weight: bold;
+    color: #16c784;
+    margin-bottom: 2px;
+}
+
+.the-post .post-fix-bar .post-fix-bar-address {
+    color: #333;
+    font-size: 0.9rem;
+}
+
+.the-post .post-fix-bar .post-fix-bar-phone {
+    font-weight: bold;
+    font-size: 1.2rem;
+    background: #16c784;
+    border-color: #16c784;
+    display: inline-flex;
+    align-items: center;
+    padding: 8px 15px;
+    border-radius: 8px;
+    color: #fff;
+}
+
+    .the-post .post-fix-bar .post-fix-bar-phone i {
+        width: 20px;
+        height: 20px;
+        background: url(../images/phone-call-white.svg) center no-repeat;
+        background-size: contain;
+        display: inline-block;
+        margin-right: 5px;
+    }
+
+.the-post .post-fix-bar .post-fix-bar-save,
+.the-post .post-fix-bar .post-fix-bar-zalo {
+    font-size: 0.9rem;
+    font-weight: bold;
+    background: #fff;
+    border: 1px solid #ddd;
+    display: inline-flex;
+    align-items: center;
+    padding: 8px 15px;
+    border-radius: 8px;
+    color: #333;
+    margin-right: 5px;
+    cursor: pointer;
+}
+
+    .the-post .post-fix-bar .post-fix-bar-save i {
+        width: 20px;
+        height: 20px;
+        background: url(../images/love.svg) center no-repeat;
+        background-size: contain;
+        display: inline-block;
+        margin-right: 5px;
+    }
+
+    .the-post .post-fix-bar .post-fix-bar-save.saved i {
+        background: url(../images/love-full.svg) center no-repeat;
+        background-size: contain;
+    }
+
+.author-aside {
+    border: 1px solid #febb02;
+    padding: 15px;
+    border-radius: 5px;
+    margin-bottom: 20px;
+    background-color: #febb02;
+}
+
+    .author-aside .author-avatar {
+        width: 80px;
+        height: 80px;
+        border-radius: 50%;
+        overflow: hidden;
+        margin: 0 auto 10px;
+    }
+
+    .author-aside .author-name {
+        font-size: 1.5rem;
+        font-weight: bold;
+        display: block;
+        margin-bottom: 10px;
+        text-align: center;
+    }
+
+    .author-aside .author-online-status {
+        text-align: center;
+    }
+
+        .author-aside .author-online-status i {
+            width: 7px;
+            height: 7px;
+            border-radius: 50%;
+            background-color: #ddd;
+            display: inline-block;
+            margin-right: 5px;
+            margin-bottom: 2px;
+        }
+
+        .author-aside .author-online-status.online i {
+            background-color: #14c683;
+        }
+
+    .author-aside .author-phone {
+        font-weight: bold;
+        font-size: 1.5rem;
+        width: 100%;
+        background: #16c784;
+        border-color: #16c784;
+        background: linear-gradient(to right, #16c784, #16c784);
+        margin-bottom: 10px;
+    }
+
+        .author-aside .author-phone:hover {
+            text-decoration: none;
+            background: #13bb7b;
+            border-color: #13bb7b;
+            background: linear-gradient(to right, #13bb7b, #13bb7b);
+        }
+
+        .author-aside .author-phone i {
+            width: 20px;
+            height: 20px;
+            background: url(../images/phone-call-white.svg) center no-repeat;
+            background-size: contain;
+            display: inline-block;
+            margin-right: 5px;
+        }
+
+    .author-aside .author-zalo {
+        width: 100%;
+        background: #fff;
+        border-color: #333;
+        background: linear-gradient(to right, #fff, #fff);
+        color: #333;
+        margin-bottom: 5px;
+    }
+
+        .author-aside .author-zalo i {
+            width: 25px;
+            height: 25px;
+            background: url(../images/icon-zalo.png) center no-repeat;
+            background-size: contain;
+            display: inline-block;
+            margin-right: 5px;
+        }
+
+    .author-aside .btn.post-save {
+        width: 100%;
+        background: #fff;
+        border-color: #333;
+        background: linear-gradient(to right, #fff, #fff);
+        color: #333;
+    }
+
+        .author-aside .btn.post-save i {
+            width: 23px;
+            height: 23px;
+            background: url(../images/love.svg) center no-repeat;
+            background-size: contain;
+            display: inline-block;
+            margin-right: 5px;
+        }
+
+        .author-aside .btn.post-save.saved i {
+            background: url(../images/love-full.svg) center no-repeat;
+            background-size: contain;
+        }
+
+.icon-megaphone {
+    width: 30px;
+    height: 30px;
+    background: url(../images/megaphone.svg) center no-repeat;
+    background-size: contain;
+    display: inline-block;
+    margin-right: 10px;
+}
