--- a/Views/Button/getPost.cshtml
+++ b/Views/Button/getPost.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "getPost";
+    ViewBag.Title = "Đăng tin mới";
     Layout = "~/Views/Shared/_MyLayout.cshtml";
 }
 @*@Styles.Render("~/Content/css")
