--- a/Views/News/NewsDetail.cshtml
+++ b/Views/News/NewsDetail.cshtml
@@ -17,7 +17,7 @@
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb pb-0">
                         <li class="breadcrumb-item"><a href="/trang-chu">Trang chủ</a></li>
-                        <li class="breadcrumb-item"><a href="/tin-tuc">Trang chủ</a></li>
+                        <li class="breadcrumb-item"><a href="/tin-tuc">Tin tức</a></li>
                         <li class="breadcrumb-item active" aria-current="page"><a href="/tin-tuc/@ViewBag.metaNewsType" style="color: inherit;">@ViewBag.titleNewsType</a></li>
                     </ol>
                 </nav>
