--- a/Views/RoomInfo/RoomDetail.cshtml
+++ b/Views/RoomInfo/RoomDetail.cshtml
@@ -138,7 +138,7 @@
             <div class="right-content">
 
                 <div class="author-aside">
-                    <figure class="author-avatar"><img src="https://phongtro123.com/images/default-user.png"></figure><span class="author-name">Pearl</span>
+                    <figure class="author-avatar"><img src="https://phongtro123.com/images/default-user.png"></figure><span class="author-name">@Model.Account.name</span>
                     <div style="min-height: 16px; margin-bottom: 10px;">
                         <div class="js-author-online-status author-online-status offline" author_id="146225">
                             <i></i><span>
@@ -146,7 +146,7 @@
                                 giờ trước
                             </span>
                         </div>
-                    </div><a class="btn author-phone" rel="nofollow" href="tel:0914398413"><i></i> 0914398413</a><a class="btn author-zalo" target="_blank" rel="nofollow" href="https://zalo.me/0914398413">
+                    </div><a class="btn author-phone" rel="nofollow" href="tel:@Model.Account.phoneNum"><i></i> @Model.Account.phoneNum</a><a class="btn author-zalo" target="_blank" rel="nofollow" href="https://zalo.me/0914398413">
                         <i></i> Nhắn
                         Zalo
                     </a><span class="btn post-save js-btn-save" data-post-id="668196"><i></i> Yêu thích</span>
