--- a/Areas/Admin/Views/RoomInfoes/Index.cshtml
+++ b/Areas/Admin/Views/RoomInfoes/Index.cshtml
@@ -1,187 +1,34 @@
-﻿@model IEnumerable<HoiTroWebsite.Models.RoomInfo>
+﻿@using HoiTroWebsite.Help
+@model HoiTroWebsite.Models.RoomType
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Danh sách cho thuê";
     Layout = "~/Areas/Admin/Views/Shared/_AdminLayoutPage.cshtml";
 }
+@section _Header
+{
+    <!-- DataTables CSS -->
+    <link href="~/Areas/Admin/Content/vendor/datatables-plugins/dataTables.bootstrap.css" rel="stylesheet">
 
-<h2>Index</h2>
+    <!-- DataTables Responsive CSS -->
+    <link href="~/Areas/Admin/Content/vendor/datatables-responsive/dataTables.responsive.css" rel="stylesheet">
+}
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
 <div class="col-lg-12">
     <div class="panel panel-default">
         <div class="panel-heading">
             Quản lý Menu
         </div>
         <div class="panel-body">
-            <div id="dataTables-example_wrapper" class="dataTables_wrapper form-inline dt-bootstrap no-footer">
-                <div class="row">
-                    <div class="col-sm-6">
-                        <div class="dataTables_length" id="dataTables-example_length">
-                            <label>
-                                Show <select name="dataTables-example_length" aria-controls="dataTables-example"
-                                             class="form-control input-sm">
-                                    <option value="10">10</option>
-                                    <option value="25">25</option>
-                                    <option value="50">50</option>
-                                    <option value="100">100</option>
-                                </select> entries
-                            </label>
-                        </div>
-                    </div>
-                    <div class="col-sm-6">
-                        <div id="dataTables-example_filter" class="dataTables_filter">
-                            <label>
-                                Search:<input type="search"
-                                              class="form-control input-sm" placeholder="" aria-controls="dataTables-example">
-                            </label>
-                        </div>
-                    </div>
+            <div class="bs-example" style="text-align:right; padding-bottom:10px;">
+                <div class="btn-group">
+                    @Html.DropDownListFor(model => model.id, (SelectList)ViewBag.RoomType, " --- Tất cả phòng cho thuê --- ",
+                        new { @class = "form-control", @id = "RoomType" })
                 </div>
-                <!-- chèn bảng  -->
-                <div class="row">
-                    <!-- /.panel-heading -->
-                    <div class="col-lg-12">
-                        <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
-                            <tr>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.title)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.brief_description)
-                                </th>
-                                @*<th>
-                                    @Html.DisplayNameFor(model => model.detail_description)
-                                </th>*@
-                                <th>
-                                    @Html.DisplayNameFor(model => model.price)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.acreage)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.area)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.location)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.tenant)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.meta)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.hide)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.order)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.datebegin)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.RoomType.title)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.Account.name)
-                                </th>
-                                <th></th>
-                            </tr>
-
-                            @foreach (var item in Model)
-                            {
-                                 <tr>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.title)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.brief_description)
-                                    </td>
-                                    @*<td>
-                                        @Html.DisplayFor(modelItem => item.detail_description)
-                                    </td>*@
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.price)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.acreage)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.area)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.location)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.tenant)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.meta)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.hide)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.order)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.datebegin)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.RoomType.title)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.Account.name)
-                                    </td>
-                                    <td>
-                                        @Html.ActionLink("Edit", "Edit", new { id = item.id }) |
-                                        @Html.ActionLink("Details", "Details", new { id = item.id }) |
-                                        @Html.ActionLink("Delete", "Delete", new { id = item.id })
-                                    </td>
-                                </tr>
-                            }
-                        </table>
-                    </div>
+                <div class="btn-group">
+                    @Html.NoEncodeActionLink("<span class='glyphicon glyphicon-plus'></span> Thêm mới", "Create New", "Create", "RoomInfo", null, new { @class = "btn btn-primary" })
                 </div>
-                <div class="row">
-                    <div class="col-sm-6">
-                        <div class="dataTables_info" id="dataTables-example_info" role="status" aria-live="polite">
-                            Showing 1 to
-                            10 of 57 entries
-                        </div>
-                    </div>
-                    <div class="col-sm-6">
-                        <div class="dataTables_paginate paging_simple_numbers" id="dataTables-example_paginate">
-                            <ul class="pagination">
-                                <li class="paginate_button previous disabled" aria-controls="dataTables-example" tabindex="0"
-                                    id="dataTables-example_previous"><a href="#">Previous</a></li>
-                                <li class="paginate_button active" aria-controls="dataTables-example" tabindex="0">
-                                    <a href="#">1</a>
-                                </li>
-                                <li class="paginate_button " aria-controls="dataTables-example" tabindex="0">
-                                    <a href="#">2</a>
-                                </li>
-                                <li class="paginate_button " aria-controls="dataTables-example" tabindex="0">
-                                    <a href="#">3</a>
-                                </li>
-                                <li class="paginate_button " aria-controls="dataTables-example" tabindex="0">
-                                    <a href="#">4</a>
-                                </li>
-                                <li class="paginate_button " aria-controls="dataTables-example" tabindex="0">
-                                    <a href="#">5</a>
-                                </li>
-                                <li class="paginate_button " aria-controls="dataTables-example" tabindex="0">
-                                    <a href="#">6</a>
-                                </li>
-                                <li class="paginate_button next" aria-controls="dataTables-example" tabindex="0"
-                                    id="dataTables-example_next"><a href="#">Next</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
+                <div id="getRoom"></div>
             </div>
         </div>
     </div>
@@ -199,3 +46,37 @@
         </a>
     </div>
 </div>
+@section _Footer
+{
+    <!-- DataTables JavaScript -->
+    <script src="~/Areas/Admin/Content/vendor/datatables/js/jquery.dataTables.min.js"></script>
+    <script src="~/Areas/Admin/Content/vendor/datatables-plugins/dataTables.bootstrap.min.js"></script>
+    <script src="~/Areas/Admin/Content/vendor/datatables-responsive/dataTables.responsive.js"></script>
+
+    <!-- Custom Theme JavaScript -->
+    <script src="~/Areas/Admin/Content/dist/js/sb-admin-2.js"></script>
+
+    <!-- Page-Level Demo Scripts - Tables - Use for reference -->
+    <script>
+        $(document).ready(function () {
+            function getRoom() {
+                var roomTypeId = $('#RoomType').val()
+                $.ajax({
+                    url: '@Url.Action("getRoom", "RoomInfo")',
+                    type: "GET",
+                    data: { id: roomTypeId },
+                    success: function (data) {
+                        $("#getRoom").html(data);
+                    },
+                    error: function (data) {
+                        alert("something went wrong.");
+                    }
+                });
+            }
+            getRoom();
+            $("#RoomType").change(function () {
+                getRoom();
+            })
+        });
+    </script>
+}
