--- a/Areas/Admin/Views/RoomInfoes/Delete.cshtml
+++ b/Areas/Admin/Views/RoomInfoes/Delete.cshtml
@@ -13,7 +13,7 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.title)
+            @Html.DisplayName("Tiêu đề")
         </dt>
 
         <dd>
@@ -21,7 +21,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.brief_description)
+            @Html.DisplayName("Mô tả")
         </dt>
 
         <dd>
@@ -29,15 +29,15 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.detail_description)
+            @Html.DisplayName("Chi tiết")
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.detail_description)
+            @Html.Raw(Model.detail_description)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.price)
+            @Html.DisplayName("Giá phòng")
         </dt>
 
         <dd>
@@ -45,7 +45,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.acreage)
+            @Html.DisplayName("Diện tích")
         </dt>
 
         <dd>
@@ -53,7 +53,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.area)
+            @Html.DisplayName("Khu vực")
         </dt>
 
         <dd>
@@ -61,7 +61,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.location)
+            @Html.DisplayName("Địa chỉ")
         </dt>
 
         <dd>
@@ -69,7 +69,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.tenant)
+            @Html.DisplayName("Đối tượng cho thuê")
         </dt>
 
         <dd>
@@ -85,7 +85,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.hide)
+            @Html.DisplayName("Hiển thị")
         </dt>
 
         <dd>
@@ -93,7 +93,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.order)
+            @Html.DisplayName("Sắp xếp")
         </dt>
 
         <dd>
@@ -101,7 +101,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.datebegin)
+            @Html.DisplayName("Ngày đăng")
         </dt>
 
         <dd>
@@ -109,7 +109,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.RoomType.title)
+            @Html.DisplayName("Loại phòng")
         </dt>
 
         <dd>
@@ -117,7 +117,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Account.name)
+            @Html.DisplayName("Người đăng")
         </dt>
 
         <dd>
