--- a/Areas/Admin/Views/News/Delete.cshtml
+++ b/Areas/Admin/Views/News/Delete.cshtml
@@ -13,7 +13,7 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.title)
+            @Html.DisplayName("Tiêu đề")
         </dt>
 
         <dd>
@@ -21,15 +21,17 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.imagePath)
+            @Html.DisplayName("Ảnh đại diện")
         </dt>
 
         <dd>
-            <img src="@Model.imagePath" width="100px" />
+            <div class="col-md-4">
+                <img src="@Model.imagePath" width="100px" /> <!--Lưu ý quyết định nd lưu imagePath trên csdl-->
+            </div>
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.author)
+            @Html.DisplayName("Tác giả")
         </dt>
 
         <dd>
@@ -45,7 +47,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.hide)
+            @Html.DisplayName("Hiển thị")
         </dt>
 
         <dd>
@@ -53,7 +55,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.order)
+            @Html.DisplayName("Sắp xếp")
         </dt>
 
         <dd>
@@ -61,7 +63,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.datebegin)
+            @Html.DisplayName("Ngày đăng")
         </dt>
 
         <dd>
@@ -69,7 +71,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.brief_description)
+            @Html.DisplayName("Mô tả")
         </dt>
 
         <dd>
@@ -77,7 +79,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.detail_description)
+            @Html.DisplayName("Chi tiết")
         </dt>
 
         <dd>
@@ -85,7 +87,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.NewsType.title)
+            @Html.DisplayName("Loại tin tức")
         </dt>
 
         <dd>
