--- a/Areas/Admin/Views/RoomInfoes/Index.cshtml
+++ b/Areas/Admin/Views/RoomInfoes/Index.cshtml
@@ -26,7 +26,7 @@
                         new { @class = "form-control", @id = "RoomType" })
                 </div>
                 <div class="btn-group">
-                    @Html.NoEncodeActionLink("<span class='glyphicon glyphicon-plus'></span> Thêm mới", "Create New", "Create", "RoomInfo", null, new { @class = "btn btn-primary" })
+                    @Html.NoEncodeActionLink("<span class='glyphicon glyphicon-plus'></span> Thêm mới", "Create New", "Create", "RoomInfoes", new { }, new { @class = "btn btn-primary" })
                 </div>
                 <div id="getRoom"></div>
             </div>
@@ -60,9 +60,9 @@
     <script>
         $(document).ready(function () {
             function getRoom() {
-                var roomTypeId = $('#RoomType').val()
+                var roomTypeId = $('#RoomType').val();
                 $.ajax({
-                    url: '@Url.Action("getRoom", "RoomInfo")',
+                    url: '@Url.Action("getRoom", "RoomInfoes")',
                     type: "GET",
                     data: { id: roomTypeId },
                     success: function (data) {
